[project]
name = "network-classifier"
version = "0.1.0"
description = "CLI tool to classify road networks using betweenness centrality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "networkit>=11.2.1",
    "osmnx>=2.1.0",
    "rich>=14.0.0",
]

[project.scripts]
network-classifier = "network_classifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_classifier"]
