[project]
name = "network-classifier"
version = "0.1.0"
description = "CLI tool to classify road networks using betweenness centrality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.8.0",
    "minisom>=2.3.3",
    "networkit>=11.2.1",
    "osmnx>=2.1.0",
    "pandas>=2.0.0",
    "rich>=14.0.0",
    "scikit-fuzzy>=0.4.2",
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
network-classifier = "network_classifier.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/network_classifier"]
